Revision history for JSON-Schema-Draft201909

{{$NEXT}}

0.018     2020-12-07 18:22:07Z
          - now can correctly evaluate schemas containing unevaluatedItems,
            unevaluatedProperties keywords without the user having to
            explicitly set collect_annotations => 1 in the constructor
          - fix error in "terse" output formatting that mistakenly dropped
            some unevaluatedProperties errors

0.017     2020-11-24 19:15:18Z
          - refactor keyword implementations into separate vocabulary classes,
            to faciliate future support for custom vocabularies
          - traverse the schema before evaluation, for more correct
            and complete extraction of identifiers and invalid syntax
          - add callbacks to traverse(), to easily find keywords of interest

0.016     2020-11-18 18:18:40Z
          - further fixes to infinite loop detection
          - fix dereference error when evaluating "definitions",
            "dependencies"
          - when adding two schema documents with no canonical uri, preserve
            knowledge of other identifiers found in the first document
          - add_schema() no longer adds additional URIs to the document
            object, only the evaluator

0.015     2020-10-20 03:08:36Z
          - fixed infinity/overflow checks for older perls

0.014     2020-10-16 19:21:17Z
          - ensure "enum" value is an array
          - do not evaluate non-arrays against "unevaluatedItems"
          - fix detection of bad $recursiveAnchor
          - fix canonical uri calculation for $schema, $recursiveAnchor, and
            infinite loop detection
          - for output_format=terse, do not omit the important errors for
            unevaluated* when annotation collection is disabled

0.013     2020-09-15 19:14:53Z
          - detect more cases of resource identifier collisions
          - fix resolution of relative $ids
          - new "terse" output format

0.012     2020-08-13 20:23:21Z