@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
+          - further improvements to the "terse" output format
 
 0.018     2020-12-07 18:22:07Z
           - now can correctly evaluate schemas containing unevaluatedItems,
